# imaging_KNIME_to_Galaxy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yaml
data/: translation_table.yml
data/Galaxy_WFs/: Galaxy-Workflow-2025_02_image_conversion.ga  Galaxy-Workflow-2025_03_2D_spot_detection.ga
data/Knime_WFs/: 2025_04_segmentation_morph_ope.knwf
data/output_file/: test1_knime2galaxy_output.ga
docs/: translation_viewer.html
notebooks/: demo_notebook.ipynb  demo_notebook_detailed.ipynb  eval_notebook.ipynb
simple_workflow/: 2025-knime-imaging-examples.knwf  Galaxy.tar.xz  KNIME.tar.xz  README.md
simple_workflow/.ipynb_checkpoints/: README-checkpoint.md
src/: 06_rag_knime2galaxy_workflow Kopie.ipynb  06_rag_knime2galaxy_workflow.ipynb  Vectorstore.py  bioblend3.ipynb  demo_notebook.ipynb  enhance_prompting.ipynb  eval_notebook.ipynb  examples.py  knime_io.py  llm_client.py  main.py  parser_processors.py  parsers_functions.py  prompts.py  rag_functions.py  translate.py
src/LLM Endpoints/: 01_llm_endpoints.py  blablador_endpoint.ipynb  kisski_endpoint.ipynb  ollama_endpoint.ipynb  scadsai_endpoint.ipynb
src/data/: input_workflows.ga  workflow_translation_table.yml
src/endpoints/: 00_llm_endpoints.py
src/galaxy2py/: example.ga  main.py  translated_code.ipynb
src/imaging_knime_to_galaxy/: Vectorstore.py  knime_io.py  prompts.py  rag_functions.py  translate.py
src/java2py/: main.py  translated_code.ipynb
src/knime2galaxy/: 02_knime2galaxy_workflow_rag.ipynb  03_knime2galaxy_workflow.ipynb  04_get_tool_id.ipynb  README.md  main.py  (+9 more)
(+116 files in other folders)
